trunk/Archive2/e9/bad513e2453727/output
main.cpp:20:2: error: no newline at end of file [-Werror,-Wnewline-eof]
}
 ^
1 error generated.
